--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,29 @@ services:
     networks:
       - erp_network
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: erp_sanjeevan_backend
+    restart: always
+    ports:
+      - "5000:5000"
+    environment:
+      NODE_ENV: production
+      MONGODB_URI: mongodb://erpsanjeevan:erpsanjeevan123@mongodb:27017/erp_sanjeevan?authSource=erp_sanjeevan
+      PORT: 5000
+    depends_on:
+      - mongodb
+    networks:
+      - erp_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   mongo-express:
     image: mongo-express:latest
     container_name: erp_mongo_express
