--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://erpsanjeevan:erpsanjeevan123@localhost:27017/erp_sanjeevan?authSource=erp_sanjeevan
+MONGODB_URI=mongodb://localhost:27017/erp_sanjeevan
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
-PORT=8080
+PORT=3001
 NODE_ENV=development
