chore: update homepage and vite base for new repo

--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
           "build": "vite build",
           "preview": "vite preview"
       },
-      "homepage": "https://Aatrox05.github.io/ERP_sanjeevan"
+      "homepage": "https://Aatrox05.github.io/erp-sanjeevan-community"
   }
